--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,49 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
   font-size: 10px;
 }
+.container {
+  margin: 20px auto;
+  width: 90%;
+}
+
+div {
+  float: left;
+  margin: 1% 0;
+  width: 100%;
+  padding: 20px 25px;
+ }
+
+h1 {
+  font-size: 18px;
+  font-weight: bold;
+  padding-top: 15px;
+}
+
+img {
+  height: 360px;
+  width: 360px;
+}
+
+.emphasis, .title {
+  font-size: 30px;
+}
+
+/*code added to create 2 column design*/
+@media screen and (min-width: 575px){
+  div {
+   margin: 1%;
+   width: 48%;
+ }
+}
+
+@media screen and (min-width: 991px){
+  div {
+    margin: 1%;
+    width: 20%;
+  }
+ }
