--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ div {
   margin: 1% 0;
   width: 100%;
   padding: 20px 25px;
+  height: 340px;
  }
 
 h1 {
@@ -24,9 +25,24 @@ h1 {
   padding-top: 15px;
 }
 
-img {
-  height: 360px;
-  width: 360px;
+.baku{
+  background-image: url("../images/baku.jpg");
+  background-position: center center;
+}
+
+.london {
+  background-image: url("../images/london.png");
+  background-position: center center;
+}
+
+.madrid {
+  background-image: url("../images/madrid.jpg");
+  background-position: center center;
+}
+
+.rome {
+  background-image: url("../images/rome.jpg");
+  background-position: center center;
 }
 
 .emphasis, .title {
