--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ div {
   width: 100%;
   padding: 20px 25px;
   height: 340px;
+  background-size: cover;
  }
 
 h1 {
@@ -60,6 +61,6 @@ h1 {
 @media screen and (min-width: 991px){
   div {
     margin: 1%;
-    width: 20%;
+    width: 23%;
   }
  }
